feat: add main section

--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
                 <div class="header">
                     <div class="header-top">
                         <div class="search">
-                            <img src="assets/icons/search.svg" alt="search" class="icon" />
+                            <img
+                                src="assets/icons/search.svg"
+                                alt="search"
+                                class="icon"
+                            />
                             <input type="text" class="search-input" />
                         </div>
                         <div class="profile-info">
@@ -150,7 +154,7 @@
                                 alt="notification"
                                 class="icon"
                             />
-                            <div class="image-container">
+                            <div class="image-container small">
                                 <img
                                     src="assets/profile-image.png"
                                     class="profile-image"
@@ -170,8 +174,10 @@
                                 />
                             </div>
                             <p class="greeting">
-                                Hi there,<br>
-                                <span class="profile-name scale">Mugisha Regis(@mugisha)</span>
+                                Hi there,<br />
+                                <span class="profile-name scale"
+                                    >Mugisha Regis(@mugisha)</span
+                                >
                             </p>
                         </div>
                         <div class="buttons">
@@ -181,11 +187,281 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="main">
-                    <div class="projects"></div>
+                    <div class="projects">
+                        <strong>Your Projects</strong>
+                        <div class="projects-grid">
+                            <div class="project">
+                                <p>
+                                    <strong>Super Cool Project</strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum dolor sit amet consectetur,
+                                        adipisicing elit. Consectetur,
+                                        laboriosam dolorem sit quia distinctio
+                                        exercitationem voluptas.
+                                    </span>
+                                </p>
+
+                                <div class="icons">
+                                    <img
+                                        src="assets/icons/star-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/eye-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/fork-svgrepo-com.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p>
+                                    <strong>Less Cool Project</strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum dolor sit amet consectetur
+                                        adipisicing elit. Recusandae voluptatum
+                                        quis quibusdam, esse libero optio
+                                        officiis eius harum pariatur aut, quod
+                                        ea inventore illo est beatae. Eius nulla
+                                        laborum ad!
+                                    </span>
+                                </p>
+
+                                <div class="icons">
+                                    <img
+                                        src="assets/icons/star-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/eye-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/fork-svgrepo-com.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p>
+                                    <strong>Impossible App</strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum dolor sit amet consectetur
+                                        adipisicing elit. Quae harum expedita
+                                        dicta ut id aperiam minus?
+                                    </span>
+                                </p>
+
+                                <div class="icons">
+                                    <img
+                                        src="assets/icons/star-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/eye-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/fork-svgrepo-com.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p>
+                                    <strong>Easy Peasy App</strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum dolor sit amet consectetur
+                                        adipisicing elit. Deserunt, iste? Atque
+                                        dolores totam magni a nesciunt
+                                        dignissimos facere id. Blanditiis.
+                                    </span>
+                                </p>
+
+                                <div class="icons">
+                                    <img
+                                        src="assets/icons/star-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/eye-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/fork-svgrepo-com.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p>
+                                    <strong>Ad Blocker</strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum dolor sit amet consectetur
+                                        adipisicing elit. Ipsam totam tenetur
+                                        animi asperiores ipsum nihil quisquam
+                                        distinctio error!
+                                    </span>
+                                </p>
+
+                                <div class="icons">
+                                    <img
+                                        src="assets/icons/star-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                        class="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/eye-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/fork-svgrepo-com.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                </div>
+                            </div>
+                            <div class="project">
+                                <p>
+                                    <strong>Money Maker </strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum, dolor sit amet consectetur
+                                        adipisicing elit. Quae magni vitae
+                                        tempore quisquam voluptatem, nostrum
+                                        incidunt inventore reiciendis sint
+                                        iusto.
+                                    </span>
+                                </p>
+
+                                <div class="icons">
+                                    <img
+                                        src="assets/icons/star-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/eye-plus-outline.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                    <img
+                                        src="assets/icons/fork-svgrepo-com.svg"
+                                        class="icon"
+                                        alt="icon"
+                                    />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="section">
-                        <div class="announcements"></div>
-                        <div class="trending"></div>
+                        <div class="announcements">
+                            <strong>Announcements</strong>
+                            <div class="announcements-list">
+                                <p>
+                                    <strong>Site Maintenance</strong><br />
+                                    <span class="gray-text">
+                                        Lorem ipsum dolor sit, amet consectetur
+                                        adipisicing elit. Eveniet non facilis
+                                        dolor iusto sapiente deleniti vel!
+                                    </span>
+                                </p>
+                                <hr />
+                                <p>
+                                    <strong>Community Share Day</strong><br />
+                                    <span class="gray-text"
+                                        >Lorem ipsum dolor sit, amet consectetur
+                                        adipisicing elit. Libero cum ad tempore
+                                        explicabo eius culpa unde.</span
+                                    >
+                                </p>
+                                <hr />
+                                <p>
+                                    <strong>Updated Privacy Policy</strong
+                                    ><br />
+                                    <span class="gray-text"
+                                        >Lorem ipsum dolor sit amet consectetur,
+                                        adipisicing elit. Nesciunt omnis
+                                        molestiae molestias consectetur
+                                        voluptatibus porro iste.</span
+                                    >
+                                </p>
+                            </div>
+                        </div>
+                        <div class="trending">
+                            <strong>Trending</strong>
+                            <div class="trending-profiles">
+                                <div class="trending-profile">
+                                    <div class="image01-container">
+                                        <img
+                                            src="assets/dog.png"
+                                            alt="profile-image"
+                                            class="trend-profile-image"
+                                        />
+                                    </div>
+                                    <p>
+                                        <strong>@tegan</strong><br>
+                                        <span class="gray-text">World Peace Builder</span>
+                                    </p>
+                                </div>
+                                <div class="trending-profile">
+                                    <div class="image02-container">
+                                        <img
+                                            src="assets/profile-image.png"
+                                            class="trend-profile-image"
+                                            alt="profile"
+                                        />
+                                    </div>
+                                    <p>
+                                        <strong>@mugisha</strong><br>
+                                        <span class="gray-text">Super Cool Project</span>
+                                    </p>
+                                </div>
+                                <div class="trending-profile">
+                                    <div class="image03-container">
+                                        <img
+                                            src="assets/superhero.png"
+                                            alt=""
+                                            class="trend-profile-image"
+                                        />
+                                    </div>
+                                    <p>
+                                        <strong>@kendall</strong><br>
+                                        <span class="gray-text">Life Changing App</span>
+                                    </p>
+                                </div>
+                                <div class="trending-profile">
+                                    <div class="image04-container">
+                                        <img
+                                            src="assets/penguin.png"
+                                            alt=""
+                                            class="trend-profile-image"
+                                        />
+                                    </div>
+                                        <p>
+                                            <strong>@alex</strong><br>
+                                            <span class="gray-text"> No Traffic Maker </span>
+                                        </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
